--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 				<p>
 					Imagine you don't need a diet, because we provide you the best healthy
 					and delicious food.
-				</p>
+				</p
 				<a class="link-btn" href="https://google.com">Order Now</a>
 			</div>
 			<div class="half-width">
-				<img src="/images/male/hamburger.png" alt="" />
+				<img src="./images/female/eat-healthy-food-png-transparent-eat-healthy-foodpng-images-woman-eating-png-480_319-removebg-preview.png" alt="" />
 			</div>
 		</header>
 		<section class="about">
