--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</header>
 		<section class="about">
 			<div class="half-width">
-				<img src="/images/male/freshburger.png" alt="" />
+				<img src="./images/female/6667872_preview-removebg-preview.png" alt="" />
 			</div>
 			<div class="half-width">
 				<h1>About Me</h1>
