everything done finally

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 		<nav class="nav">
 			<a href="https://www.google.com/"><h1>Food Network</h1></a>
 			<ul>
-				<li><a class="active" href="#home">Home</a></li>
-				<li><a href="#news">News</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a class="active" href="index.html">Home</a></li>
+				<li><a href="#recipe">Recipe</a></li>
 				<li><a href="#about">About</a></li>
 			</ul>
 		</nav>
-		<header>
+		<header class="header">
 			<div class="half-width">
 				<h1>
 					<span>Skip</span> The Diet,<br />
@@ -35,20 +34,20 @@
 					Imagine you don't need a diet, because we provide you the best healthy
 					and delicious food.
 				</p
-				<a class="link-btn" href="https://google.com">Order Now</a>
+				<a id="order-btn" href="#"><button>Order now</button></a>
 			</div>
 			<div class="half-width">
 				<img src="./images/female/eat-healthy-food-png-transparent-eat-healthy-foodpng-images-woman-eating-png-480_319-removebg-preview.png" alt="" />
 			</div>
 		</header>
 		<section class="icon-bar">
-				<a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
-				<a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
-				<a href="#" class="google"><i class="fa fa-google"></i></a> 
-				<a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-				<a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
+				<a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a> 
+				<a href="https://www.twitter.com/" class="twitter"><i class="fa fa-twitter"></i></a> 
+				<a href="https://www.google.com/" class="google"><i class="fa fa-google"></i></a> 
+				<a href="https://www.linkedin.com/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+				<a href="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a> 
 		</section>
-		<section class="about">
+		<section class="about" id="about">
 			<div class="half-width">
 				<img class="about-img" src="./images/female/6667872_preview-removebg-preview.png" alt="" />
 			</div>
@@ -61,12 +60,11 @@
 				<button>Hire Me</button>
 			</div>
 		</section>
-		<section class="recipe">
+		<section id="recipe" class="recipe">
 			<div class="recipe-text">
 				<h1>My recipe</h1>
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-					molestiae laudantium earum quasi? Vel, soluta.
+					sorry for inconvenience. there's nothing here.
 				</p>
 			</div>
 			<div class="cards">
@@ -92,8 +90,6 @@
 					</div>
 					</div>
 				</div>
-				
-				
 			</div>
 		</section>
 		<section class="social-media">
